--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
     port = ${?PORT}
   }
   application {
-    modules = [ ru.netology.ApplicationKt.module ]
+    modules = [ru.netology.ApplicationKt.module]
   }
 }
 
@@ -15,5 +15,14 @@ crud {
   }
   jwt {
     secret = 5c2dbef6-289c-46e6-8cfd-d8b3292d373a
+  }
+  fcm {
+    db-url = "https://tribune-app.firebaseio.com"
+    //    password = Qwerty
+    password = ${?FCM_PASSWORD}
+    //    salt = 5hr8Uh32HrJu5yFy35Jk
+    salt = ${?FCM_SALT}
+    //    path = ./fcm/fcm-encrypted.json
+    path = ${?FCM_PATH}
   }
 }
